--- a/OneDrive/Área de Trabalho/vue-star-nebula/vue-star-nebula/package.json
+++ b/OneDrive/Área de Trabalho/vue-star-nebula/vue-star-nebula/package.json
@@ -1,22 +1,18 @@
 {
   "name": "vue-star-nebula",
-  "version": "1.0.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "serve": "vite",
     "build": "vite build",
-    "lint": "vite lint"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13",
-    "@tsparticles/vue3": "^3.0.0"
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "vite": "^6.3.0",
-    "@vitejs/plugin-vue": "^3.0.0"
-  },
-  "engines": {
-    "node": ">=16.0.0"
+    "@vitejs/plugin-vue": "^5.2.2",
+    "vite": "^6.3.1"
   }
 }
