--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   },
   "dependencies": {
     "nuxt": "^3.16.2",
+    "swiper": "^11.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
-  },
-  "devDependencies": {
-      }
+  }
 }
